# python-project-template

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml  python-test.yml  superlinter.yml
docs/: conf.py  index.rst
python_project_name/: __main__.py  base.py  cli.py
tests/: conftest.py  test_base.py
